<resources>
    <string name="app_name">WifiScanner</string>

    <!--    MainActivity    -->
    <string name="start_scan_info">START</string>
    <string name="hint_scan_info"></string>
    <string name="retrieving_access_points">Retrieving Access Points&#8230;</string>
    <string name="stop_scan_info">PAUSE</string>
    <string name="recycler_row_header_label_bssid">BSSID</string>
    <string name="recycler_row_header_label_rssi">RSSI</string>
    <string name="type_text">DataType</string>
    <string name="train_text">train</string>
    <string name="test_text">test</string>
    <string name="location_toggle_text">Location ID</string>
    <string name="start_warning">You have not choose the Location ID.</string>


    <!--    Menus    -->
    <string name="action_fragment">Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="help_info">You can change the number of location IDs (default: %1$d) and the scan interval (default: %2$.1f s) in the settings. If you have other questions/concerns, please file the issue at https://github.com/miligithub/WifiScanAndroid/issues.</string>
    <string name="pick_setting_item">What do you want to change?</string>
    <string name="setting_item_text">Item</string>
    <string name="setting_text_edit_hint">Enter the number here</string>
    <array name="items_array">
        <item>Number of Locations</item>
        <item>Scan Interval</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chip_draw">Draw</string>
    <string name="chip_view">View</string>
    <string name="chip_undo">Delete</string>
    <string name="chip_redo">Redo</string>
    <string name="chip_reverse">Reverse</string>
    <string name="chip_select">Select</string>
    <string name="chip_delete">Delete</string>
    <string name="action_draw">Draw</string>
    <string name="btn_undo">Delete</string>
    <string name="btn_redo">Redo</string>
    <string name="btn_reverse">Reverse</string>
    <string name="btn_draw">Draw</string>
    <string name="btn_select">Select</string>
</resources>