<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
<!--    <item-->
<!--        android:id="@+id/action_draw"-->
<!--        android:icon="@drawable/ic_action_draw"-->
<!--        android:title="@string/action_draw"-->
<!--        android:tooltipText="@string/action_draw"-->
<!--        app:showAsAction="always|withText"-->
<!--        tools:targetApi="o" />-->
    <item
        android:id="@+id/action_fragment"
        android:icon="@drawable/ic_action_info"
        android:title="@string/action_fragment"
        android:tooltipText="@string/action_fragment"
        app:showAsAction="ifRoom|withText"
        tools:targetApi="o" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        android:tooltipText="@string/action_settings"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        android:tooltipText="@string/action_help"
        app:showAsAction="ifRoom|withText" />

</menu>