<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartFragment">

    <!-- TODO: Update blank fragment layout -->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/hello_blank_fragment" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chart_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/larger_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/chip_view" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chip_draw" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chip_select" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_reverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chip_reverse" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/chip_delete" />
        </com.google.android.material.chip.ChipGroup>


        <mili.wifiscanner.MyChartView
            android:id="@+id/chart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingVertical="@dimen/default_padding"
            android:paddingEnd="@dimen/larger_padding"
            app:axisColor="#d000"
            app:axisThickness="2dp"
            app:dataColor="#a6c"
            app:dataThickness="8dp"
            app:exampleColor="@color/purple_200"
            app:exampleDimension="24sp"
            app:exampleDrawable="@android:drawable/ic_menu_add"
            app:exampleString="Hello, MyChartView"
            app:gridColor="#2000"
            app:gridThickness="1dp"
            app:labelSeparation="10dp"
            app:labelTextColor="#d000"
            app:labelTextSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/chart_chip_group"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>